--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -10,48 +10,33 @@
 <body>
 <h4>New User Registration</h4>
 <form autocomplete="off"
+      onsubmit="return validate()"
       th:action="@{/register}"
       th:object="${user}" method="post">
     First Name
     <input type="text" id="firstName" placeholder="First Name"
            th:field="*{firstName}"/>
-    <mark><strong>
-            <span th:if="${#fields.hasErrors('firstName')}"
-                  th:errors="*{firstName}"> </span>
-    </strong></mark>
+    <span id="firstName-error-message"></span>
     <br/>
     Last Name
     <input type="text" id="lastName" placeholder="Last Name"
            th:field="*{lastName}"/>
-    <mark><strong>
-            <span th:if="${#fields.hasErrors('lastName')}"
-                  th:errors="*{lastName}"> </span>
-    </strong></mark>
     <br/>
-
+    Age <input type="number" id="age">
+    <span id="age-error-message"></span>
+    <br/>
     Email
     <input type="email" id="email" placeholder="email@domain.com"
            th:field="*{email}"/>
-    <mark><strong>
-            <span th:if="${#fields.hasErrors('email')}"
-                  th:errors="*{email}"> </span>
-    </strong></mark>
     <br/>
     Username
     <input type="text" id="username" placeholder="Username"
            th:field="*{username}"/>
-    <mark><strong>
-            <span th:if="${#fields.hasErrors('username')}"
-                  th:errors="*{username}"> </span>
-    </strong></mark>
     <br/>
     Password
     <input type="password" id="password" placeholder="Password"
            th:field="*{password}"/>
-    <mark><strong>
-            <span th:if="${#fields.hasErrors('password')}"
-                  th:errors="*{password}"> </span>
-    </strong></mark>
+    <span id="password-error-message"></span>
     <br/>
     <button type="submit" class="btn btn-default">Submit</button>
 </form>
@@ -66,5 +51,8 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+<script th:src="@{/js/validation.js}">
+
+</script>
 </body>
 </html>
